# GuiLite

./: .gitignore  .sync.sh  1h-1cpp.sh  CMakeLists.txt  GuiLite.cpp  GuiLite.h  GuiLite.sln  GuiLite.uvprojx  GuiLite.vcxproj  GuiLite.vcxproj.filters  HowToBuild.md  README-cn.md  README.md  README_zh.md  connect.sh  sync.bat  sync_build.bat  xmake.lua
.github/: FUNDING.yml  sponsorChannel.md
core/: CMakeLists.txt  README.md  bitmap.cpp  cmd_target.cpp  core.sln  core.vcxproj  core.vcxproj.filters  display.cpp  rect.cpp  surface.cpp  theme.cpp  wnd.cpp  word.cpp  xmake.lua
core/adapter/: api_linux.cpp  api_unknow.cpp  api_win.cpp  audio_linux.cpp  audio_win.cpp  msg_linux.cpp  msg_unknow.cpp  msg_win.cpp
core/core_include/: alarm_queue.h  api.h  audio.h  bitmap.h  cmd_target.h  display.h  msg.h  rect.h  resource.h  resource_type.h  surface.h  theme.h  wave_buffer.h  wave_ctrl.h  wnd.h  word.h
core/libs/x64/: core.lib
core/libs/x86/: core.lib
core/src/: bitmap.cpp  cmd_target.cpp  display.cpp  rect.cpp  rgb.cpp  surface.cpp  theme.cpp  wave_buffer.cpp  wave_ctrl.cpp  wnd.cpp  word.cpp
core/src/adapter/: api_linux.cpp  api_win.cpp  audio_linux.cpp  audio_win.cpp  msg_linux.cpp  msg_none.cpp  msg_win.cpp
core_include/: api.h  audio.h  bitmap.h  cmd_target.h  display.h  msg.h  rect.h  resource.h  surface.h  theme.h  wnd.h  word.h
doc/: CharityTracker.md  CodeWalkthough-cn.md  CodeWalkthough.md  DonationList.md  HowLayoutWork.md  HowToBuild.md  HowToWork-cn.md  HowToWork.md  README-cn.md  UML.md
documents/: HowLayoutWork.md  HowMessageWork.md  HowToBuild.md  HowToUse.md  HowToWork-cn.md  HowToWork.md
gui/: CMakeLists.txt  README.md  gui.sln  gui.vcxproj  gui.vcxproj.filters  xmake.lua
src/: .sync.sh  CMakeLists.txt  GenerateGuiLite.h.sh  GuiLite.uvprojx  GuiLite.vcxproj  GuiLite.vcxproj.filters  sync_build.bat
widgets/: button.cpp  dialog.cpp  edit.cpp  gesture.cpp  keyboard.cpp  label.cpp  list_box.cpp  slide_group.cpp  spinbox.cpp  table.cpp  wave_buffer.cpp  wave_ctrl.cpp
widgets_include/: button.h  dialog.h  edit.h  gesture.h  keyboard.h  list_box.h  slide_group.h  spinbox.h  table.h
workspace/: .gitignore  .sync.sh  1h-1cpp.sh  CMakeLists.txt  GuiLite.uvprojx  GuiLite.vcxproj  (+3 more)
(+151 files in other folders)
